<resources>
    <string name="app_name">MatfActive</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Friends</string>
    <string name="login">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_bt">LOG IN</string>
    <string name="signup_text">"Don't have an account yet?"</string>
    <string name="signup_bt">SIGN UP</string>
    <string name="signout_bt">SIGN OUT</string>
    <string name="username">Username</string>
    <string name="goal">Your daily steps goal</string>
    <string name="logout">Log out</string>



</resources>